# edm-fitter

./: .gitignore  CMakeLists.txt  README  setup.sh  ucl-setup.sh
src/: CMakeLists.txt  fitEDM_with_Blinding.C
